# subseqs

./: .gitignore  Cargo.toml  README.md  cy_subseq.pyx  example.py  test.py
src/: lib.rs
