[package]
name = "subseqs"
version = "0.1.0"
authors = ["Davis Kirkendall <davis.e.kirkendall@gmail.com>"]
edition = "2018"

[lib]
name = "subseq"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13"
ndarray = "0.14"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

